@@ -1,11 +1,13 @@
 LIST OF CHANGES
 ---------------
 
- - Added a table for storing one of Illumina's XML files with
+ - Add a table for storing one of Illumina's XML files with
    run information, iseq_run_info.
-   Added collumns to the iseq_run table to capture some values from
+   Add collumns to the iseq_run table to capture some values from
    these Illumina files. The choice of the values is driven by the
    current financial reporting need.
+   Create a trigger to populate these columns when the record in
+   the iseq_run_info is created or updated.
 
 release 6.19.2
  - additional fields for the pac_bio_run_well_metrics tables and
